First complete README.txt